k8s/apps/user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: petbro
spec:
  selector:
    app: userservice
  ports:
    - port: 8081
      targetPort: 8081
